ingress-deployment/gitlab-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gitlab-service
  namespace: dev
  labels:
    app: gitlab-app
spec:
  type: NodePort
  selector:
    app: gitlab-app
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
