ingress-deployment/story-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: storybook-service
  namespace: dev
  labels:
    app: storybook-app
spec:
  type: NodePort
  selector:
    app: storybook-app
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
